[tool.poetry]
name = "myresume_backend"
version = "0.1.0"
description = "implementation of the backend for my cloud resume"
authors = ["pop timmytandian <mail@timmytandian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = {extras = ["validation"], version = "^2.28.1"}
fastjsonschema = "^2.19.0"

[tool.poetry.group.dev.dependencies]
botocore = "1.30.1"
boto3 = "1.27.1"
pytest = "^7.4.3"
moto = "^4.2.11"
validators = "^0.22.0"
coverage = "^7.3.2"
pytest-socket = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"